--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -2,4 +2,5 @@ $mainColor: #0282f9;
 $grey100: #1c1c1c;
 $grey300: #303030;
 $widthContainer: 80%;
-$lineheightLink: 5.5rem;
+$lineheightLink: 6rem;
+$sectionPadding: 2.25rem 0;
