--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,6 +1,7 @@
 $mainColor: #0282f9;
 $grey100: #1c1c1c;
 $grey300: #303030;
+$grey500: #959595;
 $widthContainer: 80%;
 $lineheightLink: 6rem;
 $sectionPadding: 2.25rem 0;
