--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -1,7 +1,16 @@
+//colors
 $mainColor: #0282f9;
 $grey100: #1c1c1c;
 $grey300: #303030;
 $grey500: #959595;
-$widthContainer: 80%;
+//colors
+$widthContainer: 62.5rem;
+//line-height link
 $lineheightLink: 6rem;
+//section padding
 $sectionPadding: 2rem 0;
+//gap
+$smGap: 0.625rem;
+$smGapX2: $smGap * 2;
+$mdGap: .8rem;
+$mdGapX2: $mdGap * 2;
