--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -9,9 +9,10 @@
 
 //font
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap');
-body, button {
+body, button, a {
     font-family: 'PT Sans Narrow', sans-serif;
 }
+
 h3 {
     font-size: 1.75rem;
     text-transform: uppercase;
