--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -21,7 +21,6 @@ h3 {
 h4 {
     font-size: 1.2rem;
 }
-
 h5 {
     font-size: .9375rem;
 }
@@ -30,6 +29,7 @@ h5 {
     max-width: $widthContainer;
     margin: auto;
     color: #fff;
+    padding: 0 $smGapX2;
 }
 
 //reset list
